fix(ui): social media icons alignment (#4156)
* fix(ui): social media icons alignment

* removed trailing space and ordered properties

* removed border, added space and decreased space

* ordered properties

* changed gap to column-gap

* reverted border back

---------

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -27,13 +27,18 @@
 }
 
 .footer-social-icon {
-  margin-left: 15px;
-  width: 32px;
+  width: 28px;
+}
+
+.footer-social-icons-row {
+  column-gap: 5px;
+  margin: inherit;
 }
 
 .bounce-out-on-hover {
   box-shadow: 0 0 1px $black;
   display: inline-block;
+  padding: 4px;
   transform: perspective(1px) translateZ(0);
   transition-duration: .5s;
   vertical-align: middle;
